# jot

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  PROJECT.MD  PROJECT.md  README.md  skills-lock.json
.github/workflows/: android-debug.yml  ci.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  openapi.rs  state.rs  test_helpers.rs  tests.rs
crates/api/src/auth/: middleware.rs  mod.rs
crates/api/src/routes/: auth.rs  blocks.rs  board_keys.rs  board_shares.rs  boards.rs  devices.rs  export.rs  health.rs  identity.rs  invites.rs  link.rs  mod.rs  notes.rs  register.rs  shares.rs  spa.rs  tags.rs  ws.rs
crates/api/tests/: blocks_e2e.rs
crates/cli/: Cargo.toml
crates/cli/locales/: de.json  en.json  es.json  fr.json
crates/cli/src/: client.rs  config.rs  error.rs  i18n.rs  identity.rs  lib.rs  main.rs  onboarding.rs
crates/cli/src/commands/: account_delete.rs  add.rs  backlinks.rs  block.rs  board.rs  board_share.rs  boards.rs  contacts.rs  device.rs  export.rs  invite.rs  journal.rs  link.rs  list.rs  migrate.rs  mod.rs  new.rs  note.rs  read.rs  serve.rs  share.rs  stats.rs  tag.rs  todo.rs  whoami.rs
crates/cli/src/tui/: app.rs  blocks.rs  mod.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/blocks/: links.rs  mod.rs  split.rs
crates/core/src/crypto/: encryption.rs  exchange.rs  kdf.rs  mod.rs  signing.rs
crates/core/src/models/: block.rs  board.rs  device.rs  link.rs  mod.rs  note.rs
crates/detect/: Cargo.toml
crates/detect/src/: lib.rs
crates/mobile-ffi/: Cargo.toml
crates/mobile-ffi/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_identities_shares.sql  0003_invite_tokens.sql  0004_board_shares.sql  0005_identity_pubkey.sql  0006_share_permissions.sql  0007_board_keys.sql  0008_blocks.sql
crates/storage/src/: error.rs  lib.rs
crates/storage/src/blobs/: local.rs  mod.rs  s3.rs
crates/storage/src/db/: block_links.rs  blocks.rs  board_keys.rs  board_shares.rs  boards.rs  devices.rs  identity.rs  invites.rs  links.rs  mod.rs  notes.rs  shares.rs  tags.rs
docs/: blocks.md  capacity.md  sharing-crypto-design.md
docs/superpowers/plans/: 2026-05-09-detect.md  2026-05-09-storage.md  2026-05-09-workspace-core.md  2026-05-10-api.md  2026-05-10-cli.md  2026-05-10-sp6-web-release-plan.md  2026-05-11-block-structure.md  2026-05-12-backlinks.md
docs/superpowers/specs/: 2026-05-09-detect-design.md  2026-05-09-storage-design.md  2026-05-09-workspace-core-design.md  2026-05-10-api-design.md  2026-05-10-cli-design.md  2026-05-10-sp6-web-release-design.md  2026-05-11-block-structure-design.md  2026-05-12-backlinks-design.md
mobile/: .gitignore  README.md  pubspec.yaml
mobile/lib/: main.dart  router.dart  theme.dart
mobile/lib/models/: block.dart  board.dart  device.dart  identity.dart  link_session.dart  note.dart
mobile/lib/screens/: boards_screen.dart  devices_screen.dart  link_screen.dart  note_screen.dart  notes_screen.dart  onboarding_screen.dart  profile_screen.dart  server_screen.dart  settings_screen.dart
mobile/lib/services/: api_client.dart  crypto.dart  secure_storage.dart  ws.dart
mobile/lib/state/: providers.dart
mobile/lib/widgets/: empty_state.dart
mobile/rust/: jot_mobile_ffi.h
scripts/: _common.sh  build-all.sh  build-linux-aarch64.sh  build-linux-x86_64.sh  build-macos-aarch64.sh  build-macos-x86_64.sh  build-spa.sh  build-windows-x86_64.sh
spa/: index.html  package-lock.json  package.json  vite.config.ts
spa/src/: App.tsx  api.ts  crypto.ts  selectedNote.ts  sidebarRefresh.ts  style.css  theme.ts  toast.ts  viewMode.ts
spa/src/blocks/: crypto.ts  keymap.ts  markdown.ts  migrate.ts  tree.ts  undo.ts
spa/src/components/: Layout.tsx  (+14 more)
website/: index.html  package-lock.json  package.json
website/src/: main.js  style.css
(+6 files in other folders)
