[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
jot-core = { path = "../core" }
storage = { path = "../storage" }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
async-trait = "0.1"
dashmap = "5"
base64 = "0.22"
hex = "0.4"
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path"] }
mime_guess = "2"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
