[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
jot-core = { path = "../core" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
aws-sdk-s3 = "1.132"
openssl = { version = "0.10", features = ["vendored"] }
aws-config = "1"
tokio = { version = "1", features = ["fs"] }
async-trait = "0.1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
tempfile = "3"
